include dependency repositories to build

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -75,7 +75,8 @@
       "path_to_root": "sharepoint/common",
       "url": "https://github.com/MicrosoftDocs/OfficeDocs-pr",
       "branch": "live",
-      "branch_mapping": {}
+      "branch_mapping": {},
+      "include_in_build": true
     }
   ],
   "branch_target_mapping": {
