--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,12 +1,5 @@
-# Lines starting with '#' are comments.
-# Each line is a file pattern followed by one or more owners.
-
-# These owners will be the default owners for everything in the repo.
 docfx.json                          @microsoftdocs/officedocs-admin
 .openpublishing.build.ps1           @microsoftdocs/officedocs-admin
 .openpublishing.publish.config.json @microsoftdocs/officedocs-admin
 CODEOWNERS                          @microsoftdocs/officedocs-admin
-
-/OneDrive/                          @kaarins
-/SharePoint/                        
-/migration/                         @JoanneHendrickson
+.acrolinx-config.edn                @microsoftdocs/officedocs-admin
