--- a/SharePoint/Hub/index.yml
+++ b/SharePoint/Hub/index.yml
@@ -26,33 +26,33 @@ additionalContent:
         # Card
         - title: SharePoint Online
           summary: Find resources for managing SharePoint Online in your Office 365 environment.
-          url: /sharepoint/sharepoint-online.md
+          url: /sharepoint/sharepoint-online
         # Card
         - title: Migrate to SharePoint Online
           summary: Move your data to the cloud. Migrate data from either your on-premises file shares or SharePoint Server to SharePoint Online.
-          url: /sharepointmigration/migrate-to-sharepoint-online.md
+          url: /sharepointmigration/migrate-to-sharepoint-online
         # Card
         - title: SharePoint Hybrid
           summary: Learn about solutions for the SharePoint hybrid environment, and how to connect SharePoint Server and Office 365.
-          url: /sharepoint/hybrid/hybrid.md
+          url: /sharepoint/hybrid/hybrid
         # Card
         - title: PowerShell Reference for SharePoint
           summary: Learn about the PowerShell cmdlets you need to manage SharePoint Server or SharePoint Online.
-          url: /powershell/sharepoint/
+          url: /powershell/sharepoint
         # Card
         - title: SharePoint Server
           summary: Plan, deploy, and manage SharePoint Server.
-          url: /sharepoint/sharepoint-server.md
+          url: /sharepoint/sharepoint-server
         # Card
         - title: Troubleshoot
           summary: Find troubleshooting and support resources for IT Professionals and admins.
-          url: https://docs.microsoft.com/office/troubleshoot
+          url: /troubleshoot
     - title: For other audiences # < 60 chars (optional)
       items:
         # Card
         - title: Developers
           summary: Guidance for developing solutions for SharePoint.
-          url: https://docs.microsoft.com/sharepoint/dev/
+          url: /sharepoint/dev
         # Card
         - title: End users
           summary: Find help, training, and technical support for SharePoint users on support.office.com.
