--- a/SharePoint/SharePointOnline/sharepoint-online.yml
+++ b/SharePoint/SharePointOnline/sharepoint-online.yml
@@ -39,71 +39,82 @@ landingContent:
             url: https://sharepoint.uservoice.com/
 
   # Card
-  - title: Manage information governance
+  - title: Share and work together
     linkLists:
-      - linkListType: overview
+      - linkListType: learn
         links:
-          - text: Retention labels
-            url: labels.md         
-          - text: Retention policies
-            url: retention-policies.md
-          - text: Records management
-            url: records-management.md
-          - text: File plan manager
-            url: file-plan-manager.md
-          - text: Event-based retention
-            url: event-driven-retention.md
-          - text: PST import
-            url: importing-pst-files-to-office-365.md
-          - text: Third-party data connectors
-            url: archiving-third-party-data.md
-          - text: Data governance reports
-            url: view-the-data-governance-reports.md
-
-# Card (optional)
-  - title: Manage insider risks
-    linkLists:
-      - linkListType: overview
-        links:
-          - text: Insider risk management
-            url: insider-risk-management.md
-          - text: Communication compliance
-            url: communication-compliance.md
-          - text: Information barriers
-            url: information-barriers.md
-          - text: Privileged access management
-            url: privileged-access-management-overview.md
-          - text: Customer Lockbox
-            url: customer-lockbox-requests.md
+          - text: Turn external sharing on or off
+            url: turn-external-sharing-on-or-off.md         
+          - text: Small business - Create a company-wide team
+            url: https://support.office.com/article/037bb27a-bcc9-48fe-8d72-44d9482420a3
+          - text: Manage site creation
+            url: manage-site-creation.md
+          - text: How SharePoint interacts with Teams
+            url: https://docs.microsoft.com/microsoftmeams/sharepoint-onedrive-interact
+          - text: Administer OneDrive
+            url: https://docs.microsoft.com/onedrive/onedrive
 
   # Card
-  - title: Discover and respond
+  - title: Inform and engage
     linkLists:
-      - linkListType: overview
+      - linkListType: learn
         links:
-          - text: Advanced eDiscovery
-            url: overview-ediscovery-20.md
-          - text: Core eDiscovery
-            url: ediscovery-cases.md
-          - text: Content search
-            url: search-for-content.md
-          - text: Data investigations (preview)
-            url: overview-data-investigations.md
-          - text: Auditing
-            url: search-the-audit-log-in-security-and-compliance.md   
+          - text: Create modern experiences
+            url: guide-to-sharepoint-modern-experience.md
+          - text: Plan your hub sites
+            url: planning-hub-sites.md
+          - text: Add featured links
+            url: change-links-list-on-sharepoint-home-page.md
+          - text: Admin help for Yammer
+            url: https://support.office.com/article/e1464355-1f97-49ac-b2aa-dd320b179dbe
 
     # Card
-  - title: Get started with regulatory compliance
+  - title: Transform business processes
     linkLists:
-      - linkListType: get-started
+      - linkListType: learn
         links:
-          - text: Compliance Score
-            url: compliance-score.md
-          - text: GDPR compliance action plan
-            url: gdpr-action-plan.md
-          - text: Information protection for GDPR
-            url: office-365-info-protection-for-gdpr-overview.md
-          - text: ISO compliance action plan
-            url: iso-action-plan.md
-          - text: NIST compliance action plan
-            url: nist-action-plan.md
+          - text: Get started with Power Automate
+            url: https://docs.microsoft.com/flow/getting-started
+          - text: Power Apps
+            url: https://docs.microsoft.com/powerapps/
+
+  # Card
+  - title: Harness collective knowledge
+    linkLists:
+      - linkListType: learn
+        links:
+          - text: Overview of search
+            url: overview-of-search.md
+          - text: Delve for Office 365 admins
+            url: https://docs.microsoft.com/sharepoint/delve-for-office-365-admins
+
+  # Card
+  - title: Protect and manage
+    linkLists:
+      - linkListType: learn
+        links:
+          - text: Office 365 Security and Compliance
+            url: https://docs.microsoft.com/office365/securitycompliance/
+          - text: How SharePoint and OneDrive safeguard your data
+            url: safeguarding-your-data.md
+          - text: New SharePoint admin center
+            url: get-started-new-admin-center.md
+          - text: SharePoint Online management shell
+            url: sharepoint-online/connect-sharepoint-online.md
+          - text: Network planning and performance tuning
+            url: https://docs.microsoft.com/office365/enterprise/network-planning-and-performance
+
+  # Card
+  - title: Extend and develop
+    linkLists:
+      - linkListType: learn
+        links:
+          - text: Customizing SharePoint
+            url: extend-and-develop.md
+          - text: SharePoint Framework
+            url: https://docs.microsoft.com/sharepoint/dev/spfx/sharepoint-framework-overview
+          - text: SharePoint add-ins
+            url: https://docs.microsoft.com/sharepoint/dev/sp-add-ins/sharepoint-add-ins
+          - text: Patterns and practices (PnP) solution guidance
+            url: https://docs.microsoft.com/sharepoint/dev/solution-guidance/office-365-development-patterns-and-practices-solution-guidance
+
