--- a/OneDrive/onedrive.yml
+++ b/OneDrive/onedrive.yml
@@ -12,6 +12,8 @@ metadata:
   ms.collection: M365-collaboration
   author: kaarins #Required; your GitHub user alias, with correct capitalization.
   ms.author: kaarins #Required; microsoft alias of author; optional team alias.
+  manager: pamgreen
+  audience: Admin
   ms.date: 03/17/2020 #Required; mm/dd/yyyy format
   localization_priority: Priority
 
