--- a/SharePoint/Hub/index.yml
+++ b/SharePoint/Hub/index.yml
@@ -59,6 +59,6 @@ additionalContent:
           url: https://support.office.com/sharepoint
         # Card
         - title: Microsoft 365 Community Content
-          summary: Find solutions and scenario guidance for Microsoft 365 users as contributed by the IT Professional and Admin community.
+          summary: Find solutions and scenario guidance contributed by the Microsoft 365 user community.
           url: https://docs.microsoft.com/microsoft-365/community/
 
